# Search-Engine-for-A-Large-Collection-of-Articles

./: AVLTree.h  CMakeLists.txt  README.md  main.cpp  parse_file.cpp  parse_file.h  test.cpp
